--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,10 @@
     // "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
     // "declaration": true,                   /* Generates corresponding '.d.ts' file. */
     // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
-    // "sourceMap": true,                     /* Generates corresponding '.map' file. */
+    "sourceMap": true,                     /* Generates corresponding '.map' file. */
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
     "outDir": "./dist",                        /* Redirect output structure to the directory. */
-    "rootDir": "understanding-ts",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+    //"rootDir": "understanding-ts/",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                     /* Enable project compilation */
     // "tsBuildInfoFile": "./",               /* Specify file to store incremental compilation information */
     // "removeComments": true,                /* Do not emit comments to output. */
@@ -67,8 +67,8 @@
     // "node_modules" //default setting
     // "**/*.dev.ts" //files that you want exclude
   ],
-   /* "include": [
-     "app.ts",
-     "analytics.ts"
-   ] */
+   "include": [
+     "./understanding-ts/app.ts",
+     "./understanding-ts/analytics.ts"
+   ]
 }
